# vide-sum

./: .gitignore  pyproject.toml
src/text/: transcription.py
src/ui/: app.py
src/util/: file_utils.py  video_utils.py
