[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcription-based-summarization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.46.0",
    "openai>=2.6.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.50.0",
    "yt-dlp>=2025.10.22",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
